--- a/frontend-final/src/projectAdmin/package.json
+++ b/frontend-final/src/projectAdmin/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
     "axios": "^1.7.9",
+    "framer-motion": "^11.16.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
