--- a/frontend-final/src/projectFaculty/package.json
+++ b/frontend-final/src/projectFaculty/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.1",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.0.8",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.344.0",
@@ -33,6 +35,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.11"
+    "vite": "^5.4.2"
   }
 }
