--- a/frontend-final/src/projectAdmin/package.json
+++ b/frontend-final/src/projectAdmin/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "framer-motion": "^11.16.0",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
